# ghostty-automator-python

./: .gitignore  README.md  pyproject.toml
docs/: mcp-rewrite-plan.md
examples/: live_test.py  tui_test.py
src/ghostty_automator/: __init__.py  errors.py  protocol.py  sync_api.py
src/ghostty_automator/_async/: __init__.py  client.py  expect.py  terminal.py
src/ghostty_automator/_sync/: __init__.py  api.py
src/ghostty_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_errors.py  test_expect.py  test_protocol.py  test_terminal.py
