# Ghostty Automator - Playwright for Terminals
# Terminal automation library with async-first, ergonomic API

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostty-automator"
version = "0.1.0"
description = "Playwright-style terminal automation for Ghostty"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Stefanie Jane", email = "stef@hyperbliss.tech" }]
keywords = ["ghostty", "terminal", "automation", "testing", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Testing",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Framework :: AsyncIO",
]
dependencies = [
    "anyio>=4.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.14,<3",
]

[project.scripts]
ghostty-mcp = "ghostty_mcp.server:main"

[project.urls]
Homepage = "https://github.com/hyperb1iss/ghostty-automator"
Documentation = "https://hyperb1iss.github.io/ghostty-automator"
Repository = "https://github.com/hyperb1iss/ghostty-automator"
Issues = "https://github.com/hyperb1iss/ghostty-automator/issues"

# ============================================================================
# Hatch Build Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/ghostty_automator", "src/ghostty_mcp"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

# ============================================================================
# Ruff Configuration - Comprehensive Linting
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # Core Python
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    # Testing
    "PT",     # flake8-pytest-style
    # Code quality
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "BLE",    # flake8-blind-except
    "DTZ",    # flake8-datetimez
    "G",      # flake8-logging-format
    "ICN",    # flake8-import-conventions
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # Pylint
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "S",      # flake8-bandit (security)
    "SLF",    # flake8-self
    "TRY",    # tryceratops
    "COM",    # flake8-commas
    "ERA",    # eradicate (commented code)
    "T20",    # flake8-print
    "ARG",    # flake8-unused-arguments
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Single line implicit string concatenation
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
    "S101",    # Use of assert (needed for tests)
    "TRY003",  # Long exception messages
    "SLF001",  # Private member access (internal API design)
    "PLC0415", # Deferred imports (avoid circular imports)
    "S108",    # /tmp usage (necessary for socket path fallback)
    "ASYNC109", # timeout param is our API design (Playwright-style)
    "RUF001",  # Unicode characters intentional for prompt matching
    "RUF002",  # Unicode characters intentional in docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Assert allowed in tests
    "S105",    # pwd is working directory, not password
    "S106",    # pwd is working directory, not password
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic values in tests OK
    "RET504",  # Unnecessary assignment OK in tests
]
"examples/**/*.py" = [
    "T201",    # Print statements are the point of examples
]
"src/ghostty_mcp/server.py" = [
    "C901",    # Complexity expected in supertool design
    "PLR0911", # Many returns expected in action switch
    "PLR0912", # Many branches expected in action switch
    "PLR0915", # Many statements expected in action switch
]

[tool.ruff.lint.isort]
known-first-party = ["ghostty_automator", "ghostty_mcp"]
force-single-line = false
combine-as-imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80
show_missing = true

# ============================================================================
# Pyright Configuration - Strict Type Checking
# ============================================================================

[tool.pyright]
include = ["src/ghostty_automator", "src/ghostty_mcp"]
exclude = ["**/__pycache__", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
# Internal classes intentionally access each other's private methods
reportPrivateUsage = false
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
